tdf#72511 tdf#78510 ww8import: recombine into SvxLRSpaceItem for EE

This fixes Michael's 7.6 regression,
commit db115bec9254417ef7a3faf687478fe5424ab378
which split RES_LR_SPACE into (mainly) three pieces.

The regression caused paragraphs in textboxes
(and anything else that ends up in EditEng)
to lose left and right paragraph indents.

Accidentally, that regression fixed indents for comments,
since MSO ignores them for DOC format,
so I made sure that these properties were not passed to commments.

make CppunitTest_sw_ww8export4 \
    CPPUNIT_TEST_NAME=testTdf72511_editengLRSpace

Change-Id: I95121e4b32193701af3e1d77ba92c36aca7f16cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167651
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Justin Luth <jluth@mail.com>